[gd_scene load_steps=34 format=4 uid="uid://clhj282sayw66"]

[ext_resource type="Script" uid="uid://cnsd5bsbxupkc" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="FontFile" uid="uid://yftk18niv8qd" path="res://fonts/PixelOperator8-Bold.ttf" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://bayldtg4hk3xy" path="res://fonts/PixelOperator8.ttf" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://dwlohv3tah8u2" path="res://sprites/world_tileset.png" id="4_wu84c"]
[ext_resource type="Texture2D" uid="uid://cuifexq480egp" path="res://sprites/knight.png" id="5_8ln24"]
[ext_resource type="Script" uid="uid://ddfedjkda8ms4" path="res://scripts/roaming_knight.gd" id="5_rtw2f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wu84c"]
texture = ExtResource("4_wu84c")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.59224, -8, 6.54869, -6.51356, 6.16087, -0.113815, -6.26204, -1.23302)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.9536, 8, -5.94447, 8, 1.35878, -8, 1.12482)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.4714, 8, -8, 8, -1.5028, -8, 1.01171)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.32245, -6.43557, 0.378689, -8, 6.34143, -6.35548, 8, -1.96018, 4.33839, 2.86509, 5.44494, 8, -5.36063, 8, -4.57375, 3.07587, -8, -0.968845)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.58359, -2.43793, 4.17048, -2.87072, 8, 8, -6.4447, 8)
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_8ln24"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wu84c")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rtw2f"]
texture = ExtResource("4_wu84c")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_oa1go"]
sources/0 = SubResource("TileSetAtlasSource_rtw2f")

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("5_8ln24")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("5_8ln24")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("5_8ln24")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("5_8ln24")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("5_8ln24")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("5_8ln24")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("5_8ln24")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("5_8ln24")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("5_8ln24")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("5_8ln24")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("5_8ln24")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("5_8ln24")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("5_8ln24")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_8ln24")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("5_8ln24")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("5_8ln24")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("5_8ln24")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("5_8ln24")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("5_8ln24")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("5_8ln24")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("5_8ln24")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtw2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oa1go"]
radius = 6.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Panel" type="Panel" parent="."]
z_index = 2
layout_mode = 0
offset_left = -13.0
offset_top = -46.0
offset_right = -13.0
offset_bottom = -46.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -38.0
offset_right = 85.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ekxnf")
text = "Play Game
"

[node name="HostGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
text = "Host Game"

[node name="JoinGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
text = "Join Game"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.25, 2.25)

[node name="SampleLevel" type="TileMapLayer" parent="."]
z_index = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAABAAEAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wAAAAABAAMAAAABAAAAAAABAAMAAAD+/wAAAAABAAYAAAAAAAAAAAABAAYAAAACAAEAAAAEAAAAAAD8/wEAAAAEAAAAAAD8/wIAAAAEAAAAAAD7/wMAAAAEAAAAAAD6/wMAAAAEAAAAAAACAAIAAAAEAAAAAAADAAMAAAAEAAAAAAAEAAMAAAAEAAAAAAD7/wIAAAAHAAYAAAADAAIAAAAIAAYAAAD5/wMAAAALAAAAAAD4/wMAAAAKAAAAAAD3/wMAAAAKAAAAAAD2/wMAAAAJAAAAAAD1/wMAAAACAAAAAAD0/wMAAAACAAAAAAD0/wQAAAACAAEAAAD1/wQAAAACAAEAAAD9/wIAAAAAAAEAAAD+/wIAAAAAAAEAAAD//wIAAAAAAAEAAAAAAAIAAAAAAAEAAAABAAIAAAAAAAEAAAD6/wQAAAAEAAEAAAD7/wQAAAAEAAEAAAD8/wQAAAAEAAEAAAD8/wMAAAAEAAEAAAACAAMAAAAEAAEAAAACAAQAAAAEAAEAAAADAAQAAAAEAAEAAAAEAAQAAAAEAAEAAAAFAAMAAAAEAAAAAAAGAAMAAAAEAAAAAAAHAAMAAAAEAAAAAAAIAAMAAAAEAAAAAAAFAAQAAAAEAAEAAAAGAAQAAAAEAAEAAAAHAAQAAAAEAAEAAAAIAAQAAAAEAAEAAAAHAAIAAAAFAAUAAAAHAAEAAAAFAAQAAAAHAAAAAAAFAAQAAAAHAP//AAAFAAMAAAAIAAIAAAAIAAMAAADz/wQAAAACAAEAAADz/wMAAAACAAAAAAD0/wIAAAAHAAMAAADz/wIAAAAHAAMAAADz/wEAAAAHAAMAAAA=")
tile_set = SubResource("TileSet_8ln24")

[node name="Background" type="TileMapLayer" parent="."]
light_mask = 2
use_parent_material = true
tile_map_data = PackedByteArray("AAD2/wIAAAABAA0AAAD2/wMAAAABAA0AAAD2/wQAAAAAAAsAAAD3/wIAAAABAA0AAAD3/wMAAAABAA0AAAD3/wQAAAAAAAsAAAD4/wIAAAABAA0AAAD4/wMAAAABAA0AAAD4/wQAAAAAAAsAAAD5/wIAAAABAA0AAAD5/wMAAAABAA0AAAD5/wQAAAAAAAsAAAD6/wIAAAABAA0AAAD6/wMAAAABAA0AAAD6/wQAAAAAAAsAAAD7/wIAAAABAA0AAAD7/wMAAAABAA0AAAD7/wQAAAAAAAsAAAD8/wIAAAABAA0AAAD8/wMAAAABAA0AAAD8/wQAAAAAAAsAAAD9/wIAAAABAA0AAAD9/wMAAAABAA0AAAD9/wQAAAAAAAsAAAD+/wIAAAABAA0AAAD+/wMAAAABAA0AAAD+/wQAAAAAAAsAAAD//wIAAAABAA0AAAD//wMAAAABAA0AAAD//wQAAAAAAAsAAAAAAAIAAAABAA0AAAAAAAMAAAABAA0AAAAAAAQAAAAAAAsAAAABAAIAAAABAA0AAAABAAMAAAABAA0AAAABAAQAAAAAAAsAAAACAAIAAAABAA0AAAACAAMAAAABAA0AAAACAAQAAAAAAAsAAAADAAIAAAABAA0AAAADAAMAAAABAA0AAAADAAQAAAAAAAsAAAAEAAIAAAABAA0AAAAEAAMAAAABAA0AAAAEAAQAAAAAAAsAAAAFAAIAAAABAA0AAAAFAAMAAAABAA0AAAAFAAQAAAAAAAsAAAAGAAIAAAABAA0AAAAGAAMAAAABAA0AAAAGAAQAAAAAAAsAAAAHAAIAAAABAA0AAAAHAAMAAAABAA0AAAAHAAQAAAAAAAsAAAAIAAIAAAABAA0AAAAIAAMAAAABAA0AAAAIAAQAAAAAAAsAAADx/wIAAAABAA0AAADx/wMAAAABAA0AAADx/wQAAAAAAAsAAADx/wUAAAAAAAsAAADx/wYAAAAAAAsAAADy/wIAAAABAA0AAADy/wMAAAABAA0AAADy/wQAAAAAAAsAAADy/wUAAAAAAAsAAADy/wYAAAAAAAsAAADz/wIAAAABAA0AAADz/wMAAAABAA0AAADz/wQAAAAAAAsAAADz/wUAAAAAAAsAAADz/wYAAAAAAAsAAAD0/wIAAAABAA0AAAD0/wMAAAABAA0AAAD0/wQAAAAAAAsAAAD0/wUAAAAAAAsAAAD0/wYAAAAAAAsAAAD1/wIAAAABAA0AAAD1/wMAAAABAA0AAAD1/wQAAAAAAAsAAAD1/wUAAAAAAAsAAAD1/wYAAAAAAAsAAAD2/wUAAAAAAAsAAAD2/wYAAAAAAAsAAAD3/wUAAAAAAAsAAAD3/wYAAAAAAAsAAAD4/wUAAAAAAAsAAAD4/wYAAAAAAAsAAAD5/wUAAAAAAAsAAAD5/wYAAAAAAAsAAAD6/wUAAAAAAAsAAAD6/wYAAAAAAAsAAAD7/wUAAAAAAAsAAAD7/wYAAAAAAAsAAAD8/wUAAAAAAAsAAAD8/wYAAAAAAAsAAAD9/wUAAAAAAAsAAAD9/wYAAAAAAAsAAAD+/wUAAAAAAAsAAAD+/wYAAAAAAAsAAAD//wUAAAAAAAsAAAD//wYAAAAAAAsAAAAAAAUAAAAAAAsAAAAAAAYAAAAAAAsAAAABAAUAAAAAAAsAAAABAAYAAAAAAAsAAAACAAUAAAAAAAsAAAACAAYAAAAAAAsAAAADAAUAAAAAAAsAAAADAAYAAAAAAAsAAAAEAAUAAAAAAAsAAAAEAAYAAAAAAAsAAAAFAAUAAAAAAAsAAAAFAAYAAAAAAAsAAAAGAAUAAAAAAAsAAAAGAAYAAAAAAAsAAAAHAAUAAAAAAAsAAAAHAAYAAAAAAAsAAAAIAAUAAAAAAAsAAAAIAAYAAAAAAAsAAAAJAAIAAAABAA0AAAAJAAMAAAABAA0AAAAJAAQAAAAAAAsAAAAJAAUAAAAAAAsAAAAJAAYAAAAAAAsAAAAKAAIAAAABAA0AAAAKAAMAAAABAA0AAAAKAAQAAAAAAAsAAAAKAAUAAAAAAAsAAAAKAAYAAAAAAAsAAAALAAIAAAABAA0AAAALAAMAAAABAA0AAAALAAQAAAAAAAsAAAALAAUAAAAAAAsAAAALAAYAAAAAAAsAAAAMAAIAAAABAA0AAAAMAAMAAAABAA0AAAAMAAQAAAAAAAsAAAAMAAUAAAAAAAsAAAAMAAYAAAAAAAsAAAANAAIAAAABAA0AAAANAAMAAAABAA0AAAANAAQAAAAAAAsAAAANAAUAAAAAAAsAAAANAAYAAAAAAAsAAAAOAAIAAAABAA0AAAAOAAMAAAABAA0AAAAOAAQAAAAAAAsAAAAOAAUAAAAAAAsAAAAOAAYAAAAAAAsAAAAPAAIAAAABAA0AAAAPAAMAAAABAA0AAAAPAAQAAAAAAAsAAAAPAAUAAAAAAAsAAAAPAAYAAAAAAAsAAADx//n/AAABAA0AAADx//r/AAABAA0AAADx//v/AAABAA0AAADx//z/AAABAA0AAADx//3/AAABAA0AAADx//7/AAABAA0AAADx////AAABAA0AAADx/wAAAAABAA0AAADx/wEAAAABAA0AAADy//n/AAABAA0AAADy//r/AAABAA0AAADy//v/AAABAA0AAADy//z/AAABAA0AAADy//3/AAABAA0AAADy//7/AAABAA0AAADy////AAABAA0AAADy/wAAAAABAA0AAADy/wEAAAABAA0AAADz//n/AAABAA0AAADz//r/AAABAA0AAADz//v/AAABAA0AAADz//z/AAABAA0AAADz//3/AAABAA0AAADz//7/AAABAA0AAADz////AAABAA0AAADz/wAAAAABAA0AAADz/wEAAAABAA0AAAD0//n/AAABAA0AAAD0//r/AAABAA0AAAD0//v/AAABAA0AAAD0//z/AAABAA0AAAD0//3/AAABAA0AAAD0//7/AAABAA0AAAD0////AAABAA0AAAD0/wAAAAABAA0AAAD0/wEAAAABAA0AAAD1//n/AAABAA0AAAD1//r/AAABAA0AAAD1//v/AAABAA0AAAD1//z/AAABAA0AAAD1//3/AAABAA0AAAD1//7/AAABAA0AAAD1////AAABAA0AAAD1/wAAAAABAA0AAAD1/wEAAAABAA0AAAD2//n/AAABAA0AAAD2//r/AAABAA0AAAD2//v/AAABAA0AAAD2//z/AAABAA0AAAD2//3/AAABAA0AAAD2//7/AAABAA0AAAD2////AAABAA0AAAD2/wAAAAABAA0AAAD2/wEAAAABAA0AAAD3//n/AAABAA0AAAD3//r/AAABAA0AAAD3//v/AAABAA0AAAD3//z/AAABAA0AAAD3//3/AAABAA0AAAD3//7/AAABAA0AAAD3////AAABAA0AAAD3/wAAAAABAA0AAAD3/wEAAAABAA0AAAD4//n/AAABAA0AAAD4//r/AAABAA0AAAD4//v/AAABAA0AAAD4//z/AAABAA0AAAD4//3/AAABAA0AAAD4//7/AAABAA0AAAD4////AAABAA0AAAD4/wAAAAABAA0AAAD4/wEAAAABAA0AAAD5//n/AAABAA0AAAD5//r/AAABAA0AAAD5//v/AAABAA0AAAD5//z/AAABAA0AAAD5//3/AAABAA0AAAD5//7/AAABAA0AAAD5////AAABAA0AAAD5/wAAAAABAA0AAAD5/wEAAAABAA0AAAD6//n/AAABAA0AAAD6//r/AAABAA0AAAD6//v/AAABAA0AAAD6//z/AAABAA0AAAD6//3/AAABAA0AAAD6//7/AAABAA0AAAD6////AAABAA0AAAD6/wAAAAABAA0AAAD6/wEAAAABAA0AAAD7//n/AAABAA0AAAD7//r/AAABAA0AAAD7//v/AAABAA0AAAD7//z/AAABAA0AAAD7//3/AAABAA0AAAD7//7/AAABAA0AAAD7////AAABAA0AAAD7/wAAAAABAA0AAAD7/wEAAAABAA0AAAD8//n/AAABAA0AAAD8//r/AAABAA0AAAD8//v/AAABAA0AAAD8//z/AAABAA0AAAD8//3/AAABAA0AAAD8//7/AAABAA0AAAD8////AAABAA0AAAD8/wAAAAABAA0AAAD8/wEAAAABAA0AAAD9//n/AAABAA0AAAD9//r/AAABAA0AAAD9//v/AAABAA0AAAD9//z/AAABAA0AAAD9//3/AAABAA0AAAD9//7/AAABAA0AAAD9////AAABAA0AAAD9/wAAAAABAA0AAAD9/wEAAAABAA0AAAD+//n/AAABAA0AAAD+//r/AAABAA0AAAD+//v/AAABAA0AAAD+//z/AAABAA0AAAD+//3/AAABAA0AAAD+//7/AAABAA0AAAD+////AAABAA0AAAD+/wAAAAABAA0AAAD+/wEAAAABAA0AAAD///n/AAABAA0AAAD///r/AAABAA0AAAD///v/AAABAA0AAAD///z/AAABAA0AAAD///3/AAABAA0AAAD///7/AAABAA0AAAD/////AAABAA0AAAD//wAAAAABAA0AAAD//wEAAAABAA0AAAAAAPn/AAABAA0AAAAAAPr/AAABAA0AAAAAAPv/AAABAA0AAAAAAPz/AAABAA0AAAAAAP3/AAABAA0AAAAAAP7/AAABAA0AAAAAAP//AAABAA0AAAAAAAAAAAABAA0AAAAAAAEAAAABAA0AAAABAPn/AAABAA0AAAABAPr/AAABAA0AAAABAPv/AAABAA0AAAABAPz/AAABAA0AAAABAP3/AAABAA0AAAABAP7/AAABAA0AAAABAP//AAABAA0AAAABAAAAAAABAA0AAAABAAEAAAABAA0AAAACAPn/AAABAA0AAAACAPr/AAABAA0AAAACAPv/AAABAA0AAAACAPz/AAABAA0AAAACAP3/AAABAA0AAAACAP7/AAABAA0AAAACAP//AAABAA0AAAACAAAAAAABAA0AAAACAAEAAAABAA0AAAADAPn/AAABAA0AAAADAPr/AAABAA0AAAADAPv/AAABAA0AAAADAPz/AAABAA0AAAADAP3/AAABAA0AAAADAP7/AAABAA0AAAADAP//AAABAA0AAAADAAAAAAABAA0AAAADAAEAAAABAA0AAAAEAPn/AAABAA0AAAAEAPr/AAABAA0AAAAEAPv/AAABAA0AAAAEAPz/AAABAA0AAAAEAP3/AAABAA0AAAAEAP7/AAABAA0AAAAEAP//AAABAA0AAAAEAAAAAAABAA0AAAAEAAEAAAABAA0AAAAFAPn/AAABAA0AAAAFAPr/AAABAA0AAAAFAPv/AAABAA0AAAAFAPz/AAABAA0AAAAFAP3/AAABAA0AAAAFAP7/AAABAA0AAAAFAP//AAABAA0AAAAFAAAAAAABAA0AAAAFAAEAAAABAA0AAAAGAPn/AAABAA0AAAAGAPr/AAABAA0AAAAGAPv/AAABAA0AAAAGAPz/AAABAA0AAAAGAP3/AAABAA0AAAAGAP7/AAABAA0AAAAGAP//AAABAA0AAAAGAAAAAAABAA0AAAAGAAEAAAABAA0AAAAHAPn/AAABAA0AAAAHAPr/AAABAA0AAAAHAPv/AAABAA0AAAAHAPz/AAABAA0AAAAHAP3/AAABAA0AAAAHAP7/AAABAA0AAAAHAP//AAABAA0AAAAHAAAAAAABAA0AAAAHAAEAAAABAA0AAAAIAPn/AAABAA0AAAAIAPr/AAABAA0AAAAIAPv/AAABAA0AAAAIAPz/AAABAA0AAAAIAP3/AAABAA0AAAAIAP7/AAABAA0AAAAIAP//AAABAA0AAAAIAAAAAAABAA0AAAAIAAEAAAABAA0AAAAJAPn/AAABAA0AAAAJAPr/AAABAA0AAAAJAPv/AAABAA0AAAAJAPz/AAABAA0AAAAJAP3/AAABAA0AAAAJAP7/AAABAA0AAAAJAP//AAABAA0AAAAJAAAAAAABAA0AAAAJAAEAAAABAA0AAAAKAPn/AAABAA0AAAAKAPr/AAABAA0AAAAKAPv/AAABAA0AAAAKAPz/AAABAA0AAAAKAP3/AAABAA0AAAAKAP7/AAABAA0AAAAKAP//AAABAA0AAAAKAAAAAAABAA0AAAAKAAEAAAABAA0AAAALAPn/AAABAA0AAAALAPr/AAABAA0AAAALAPv/AAABAA0AAAALAPz/AAABAA0AAAALAP3/AAABAA0AAAALAP7/AAABAA0AAAALAP//AAABAA0AAAALAAAAAAABAA0AAAALAAEAAAABAA0AAAAMAPn/AAABAA0AAAAMAPr/AAABAA0AAAAMAPv/AAABAA0AAAAMAPz/AAABAA0AAAAMAP3/AAABAA0AAAAMAP7/AAABAA0AAAAMAP//AAABAA0AAAAMAAAAAAABAA0AAAAMAAEAAAABAA0AAAANAPn/AAABAA0AAAANAPr/AAABAA0AAAANAPv/AAABAA0AAAANAPz/AAABAA0AAAANAP3/AAABAA0AAAANAP7/AAABAA0AAAANAP//AAABAA0AAAANAAAAAAABAA0AAAANAAEAAAABAA0AAAAOAPn/AAABAA0AAAAOAPr/AAABAA0AAAAOAPv/AAABAA0AAAAOAPz/AAABAA0AAAAOAP3/AAABAA0AAAAOAP7/AAABAA0AAAAOAP//AAABAA0AAAAOAAAAAAABAA0AAAAOAAEAAAABAA0AAAAPAPn/AAABAA0AAAAPAPr/AAABAA0AAAAPAPv/AAABAA0AAAAPAPz/AAABAA0AAAAPAP3/AAABAA0AAAAPAP7/AAABAA0AAAAPAP//AAABAA0AAAAPAAAAAAABAA0AAAAPAAEAAAABAA0AAADw//r/AAABAA0AAADw//n/AAABAA0AAADw/wEAAAABAA0AAADw/wAAAAABAA0AAADw////AAABAA0AAADw//7/AAABAA0AAADw//3/AAABAA0AAADw//z/AAABAA0AAADw//v/AAABAA0AAADw//j/AAABAA0AAADw//f/AAABAA0AAADx//f/AAABAA0AAADy//f/AAABAA0AAADz//f/AAABAA0AAAD0//f/AAABAA0AAAD1//f/AAABAA0AAAD2//f/AAABAA0AAAD3//j/AAABAA0AAAD4//j/AAABAA0AAAD5//j/AAABAA0AAAD6//j/AAABAA0AAAD7//j/AAABAA0AAAD8//j/AAABAA0AAAD9//f/AAABAA0AAAD+//f/AAABAA0AAAD///f/AAABAA0AAAAAAPf/AAABAA0AAAABAPf/AAABAA0AAAACAPf/AAABAA0AAAADAPf/AAABAA0AAAAEAPf/AAABAA0AAAAFAPf/AAABAA0AAAAGAPf/AAABAA0AAAAHAPf/AAABAA0AAAAIAPf/AAABAA0AAAAJAPf/AAABAA0AAAAKAPf/AAABAA0AAAALAPf/AAABAA0AAAAMAPf/AAABAA0AAAANAPf/AAABAA0AAAAOAPf/AAABAA0AAAAPAPf/AAABAA0AAAAPAPj/AAABAA0AAAAOAPj/AAABAA0AAAANAPj/AAABAA0AAAAMAPj/AAABAA0AAAALAPj/AAABAA0AAAAKAPj/AAABAA0AAAAJAPj/AAABAA0AAAAIAPj/AAABAA0AAAD8//f/AAABAA0AAAD7//f/AAABAA0AAAD6//f/AAABAA0AAAD4//f/AAABAA0AAAD3//f/AAABAA0AAAD2//j/AAABAA0AAADy//j/AAABAA0AAADx//j/AAABAA0AAADz//j/AAABAA0AAAD5//f/AAABAA0AAAD1//j/AAABAA0AAAD0//j/AAABAA0AAAD9//j/AAABAA0AAAD+//j/AAABAA0AAAD///j/AAABAA0AAAAAAPj/AAABAA0AAAABAPj/AAABAA0AAAACAPj/AAABAA0AAAADAPj/AAABAA0AAAAEAPj/AAABAA0AAAAFAPj/AAABAA0AAAAGAPj/AAABAA0AAAAHAPj/AAABAA0AAADw/wIAAAABAA0AAADw/wMAAAABAA0AAADw/wQAAAAAAAsAAADw/wUAAAAAAAsAAADw/wYAAAAAAAsAAADw/wcAAAAAAAsAAADw/wgAAAAAAAsAAADx/wcAAAAAAAsAAADx/wgAAAAAAAsAAADy/wcAAAAAAAsAAADy/wgAAAAAAAsAAADz/wcAAAAAAAsAAADz/wgAAAAAAAsAAAD0/wcAAAAAAAsAAAD0/wgAAAAAAAsAAAD1/wcAAAAAAAsAAAD1/wgAAAAAAAsAAAD2/wcAAAAAAAsAAAD2/wgAAAAAAAsAAAD3/wcAAAAAAAsAAAD3/wgAAAAAAAsAAAD4/wcAAAAAAAsAAAD4/wgAAAAAAAsAAAD5/wcAAAAAAAsAAAD5/wgAAAAAAAsAAAD6/wcAAAAAAAsAAAD6/wgAAAAAAAsAAAD7/wcAAAAAAAsAAAD7/wgAAAAAAAsAAAD8/wcAAAAAAAsAAAD8/wgAAAAAAAsAAAD9/wcAAAAAAAsAAAD9/wgAAAAAAAsAAAD+/wcAAAAAAAsAAAD+/wgAAAAAAAsAAAD//wcAAAAAAAsAAAD//wgAAAAAAAsAAAAAAAcAAAAAAAsAAAAAAAgAAAAAAAsAAAABAAcAAAAAAAsAAAABAAgAAAAAAAsAAAACAAcAAAAAAAsAAAACAAgAAAAAAAsAAAADAAcAAAAAAAsAAAADAAgAAAAAAAsAAAAEAAcAAAAAAAsAAAAEAAgAAAAAAAsAAAAFAAcAAAAAAAsAAAAFAAgAAAAAAAsAAAAGAAcAAAAAAAsAAAAGAAgAAAAAAAsAAAAHAAcAAAAAAAsAAAAHAAgAAAAAAAsAAAAIAAcAAAAAAAsAAAAIAAgAAAAAAAsAAAAJAAcAAAAAAAsAAAAJAAgAAAAAAAsAAAAKAAcAAAAAAAsAAAAKAAgAAAAAAAsAAAALAAcAAAAAAAsAAAALAAgAAAAAAAsAAAAMAAcAAAAAAAsAAAAMAAgAAAAAAAsAAAANAAcAAAAAAAsAAAANAAgAAAAAAAsAAAAOAAcAAAAAAAsAAAAOAAgAAAAAAAsAAAAPAAcAAAAAAAsAAAAPAAgAAAAAAAsAAAA=")
tile_set = SubResource("TileSet_oa1go")

[node name="RoamingKnight" type="CharacterBody2D" parent="."]
script = ExtResource("5_rtw2f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RoamingKnight"]
position = Vector2(0, 4)
sprite_frames = SubResource("SpriteFrames_rtw2f")
animation = &"move"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoamingKnight"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_oa1go")

[connection signal="pressed" from="Panel/VBoxContainer/PlayGame" to="." method="_play_game"]
[connection signal="pressed" from="Panel/VBoxContainer/HostGame" to="." method="_host_game"]
[connection signal="pressed" from="Panel/VBoxContainer/JoinGame" to="." method="_join_game"]
